# codecrafters-kafka-rust

./: Cargo.toml  README.md  rustfmt.toml
newtype-macro/: Cargo.toml
newtype-macro/src/: lib.rs
newtype-macro/src/newtype/: analyze.rs  codegen.rs  lower.rs  parse.rs
newtype-macro/tests/newtype/: ui.rs
newtype-macro/tests/newtype/fail/: invalid_syntax.rs  invalid_syntax.stderr
newtype-macro/tests/newtype/pass/: valid_syntax.rs
src/: error.rs  fetch.rs  file.rs  lib.rs  main.rs  meta.rs  partition.rs  pb.rs  request.rs  response.rs  topic.rs  types.rs
