[package]
name = "codecrafters-kafka"
version = "0.1.0"
authors = ["Codecrafters <hello@codecrafters.io>"]
edition = "2021"
rust-version = "1.80"

[dependencies]
anyhow = "1"                                # error handling
bytes = "1"                                  # helps manage buffers
thiserror = "1"                             # error handling
