[package]
name = "codecrafters-kafka"
version = "0.1.0"
authors = ["Codecrafters <hello@codecrafters.io>"]
edition = "2021"
rust-version = "1.80"

[dependencies]
bytes = "1"                                  # helps manage buffers
thiserror = "2"                             # error handling
uuid = { version = "1", features = ["v4", "serde"] }