[package]
name = "codecrafters-kafka"
version = "0.1.0"
authors = ["Codecrafters <hello@codecrafters.io>"]
edition = "2021"
rust-version = "1.80"
[workspace]
members = ["newtype-macro"]

[dependencies]
bytes = "1"                                  # helps manage buffers
thiserror = "2"                             # error handling
uuid = { version = "1", features = ["v4", "serde"] }
pretty-hex = "0.4"
hex = "0.4.3"
crc = "3.2.1"
newtype-macro = { path = "./newtype-macro" }