[package]
name = "newtype-macro"
version = "0.1.0"
edition = "2021"
authors = [ "minosiants <kaspar.ru@gmail.com>" ]

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full"] }
quote = "~1.0"
proc-macro2 = "~1.0"
proc-macro-error = "~1.0"

[dev-dependencies]
trybuild = "~1.0"
